# pyszczek

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: release.yml  upload_asset.sh
src/: lib.rs
